lang2/macro/tests/ui/fail/15-multiple-storage-structs.stderr
error: encountered 2 conflicting storage structs
 --> $DIR/15-multiple-storage-structs.rs:3:1
  |
3 | #[ink::contract(version = "0.1.0")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: conflicting storage struct
 --> $DIR/15-multiple-storage-structs.rs:6:12
  |
6 |     struct FirstStorage {}
  |            ^^^^^^^^^^^^

error: conflicting storage struct
  --> $DIR/15-multiple-storage-structs.rs:10:12
   |
10 |     struct SecondStorage {}
   |            ^^^^^^^^^^^^^
